--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "cors": "^2.8.3",
     "debug": "~2.6.3",
     "express": "~4.15.2",
+    "imagemagick": "^0.1.3",
     "morgan": "~1.8.1",
     "multer": "^1.3.0",
     "pug": "~2.0.0-beta11",
